# SwallowAndEscape

./: .gitignore  BUILD_PROCESS.md  CMakeLists.txt  HANDS_ON_TUTORIAL.md  QUICK_START.md  README.md  RELEASE_GUIDE.md  SwallowAndEscape.desktop  build-appimage.sh  build-simple-package.sh  build-windows.sh  installer.nsi
.github/workflows/: release.yml
include/: quote.cc  quote.h
src/: copy.txt  main.cc  quote.cc
